fix: overflow extra space in small screens

--- a/client/src/styles/components/navbar.module.css
+++ b/client/src/styles/components/navbar.module.css
@@ -10,9 +10,7 @@
   font-family: 'GoogleSans-Regular';
   src: local('GoogleSans-Regular'), url(../fonts/GoogleSans/GoogleSans-Regular-v1.27.ttf) format('truetype');
 }
-html,body{
-  overflow-x: hidden !important;
-}
+
 .headerNav {
     display: flex;
     justify-content: center;
@@ -86,7 +84,7 @@ html,body{
 
   .navbarDesktop {
 
-    visibility: collapse;
+    display: none !important;
   }
   .mobileTopBar{
     position: absolute;
@@ -104,7 +102,7 @@ html,body{
 
 
   .navbarDesktop {
-    visibility: collapse;
+    display: none !important;
   }
   .mobileTopBar{
     position: absolute;
@@ -118,7 +116,7 @@ html,body{
   
   
   .navbarDesktop {
-    visibility: collapse;
+    display: none !important;
   }
   .mobileTopBar{
     position: absolute;
